--- a/index.html
+++ b/index.html
@@ -224,9 +224,13 @@
         Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK and NIST, with familiarity in SOX ITGC.
       </p>
 
-      <p class="summary">
-        Founder &amp; Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present).
-      </p>
+     <p class="summary">
+  Founder &amp; Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present).
+</p>
+
+<p class="summary">
+  Cybersecurity &amp; IT Support Technician — Sunset Auto Sales (Mar 2019–Present).
+</p>
 
       <div class="cta">
         <div class="cta-main">
