--- a/certifications.html
+++ b/certifications.html
@@ -165,17 +165,11 @@
           </p>
         </div>
 
-        <!-- Option A (recommended when you have proof): -->
-        <!--
-        <div class="actions">
-          <a class="btn alt" href="assets/certs/ibm-python-basics.pdf" target="_blank" rel="noopener">View Certificate</a>
-        </div>
-        -->
-
-        <!-- Option B (use until you upload proof): -->
-        <div class="actions">
-          <a class="btn alt" href="contact.html">Request certificate proof</a>
-        </div>
+     <div class="actions">
+  <a class="btn alt" href="contact.html">
+    View certificate (available upon request)
+  </a>
+</div>
       </article>
     </section>
   </main>
