--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,23 +27,51 @@
       --radius:16px;
       --shadow:0 10px 30px rgba(0,0,0,.08);
       --border:rgba(10,31,68,.12);
-      --focus: 0 0 0 3px rgba(13,110,253,.25);
+      --focus:0 0 0 3px rgba(13,110,253,.25);
       --okbg:#e9f9ef;
       --okfg:#0c6b2b;
       --errbg:#fff2f2;
       --errfg:#8a1f1f;
     }
+
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:#222}
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background:var(--bg);
+      color:#222;
+    }
     a{color:var(--navy2);text-decoration:none}
     a:hover{text-decoration:underline}
     a:focus{outline:none;box-shadow:var(--focus);border-radius:10px}
 
     header{background:var(--navy);color:#fff}
-    .nav{max-width:1100px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;padding:16px 20px;gap:16px;flex-wrap:wrap}
+    .nav{
+      max-width:1100px;
+      margin:0 auto;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:16px 20px;
+      gap:16px;
+      flex-wrap:wrap;
+    }
     .brand{display:flex;align-items:center;gap:12px;font-weight:700}
-    .brand .lock{width:26px;height:26px;border:2px solid #fff;border-radius:6px;position:relative}
-    .brand .lock:before{content:"";position:absolute;top:-12px;left:6px;right:6px;height:12px;border:2px solid #fff;border-bottom:none;border-radius:10px 10px 0 0}
+    .brand .lock{
+      width:26px;height:26px;
+      border:2px solid #fff;
+      border-radius:6px;
+      position:relative;
+    }
+    .brand .lock:before{
+      content:"";
+      position:absolute;
+      top:-12px;left:6px;right:6px;
+      height:12px;
+      border:2px solid #fff;
+      border-bottom:none;
+      border-radius:10px 10px 0 0;
+    }
 
     nav ul{list-style:none;display:flex;gap:22px;margin:0;padding:0;flex-wrap:wrap}
     nav a{color:#e8eef8;font-weight:600}
@@ -54,35 +83,68 @@
 
     .btnrow{display:flex;gap:12px;flex-wrap:wrap;margin:14px 0}
     .btn{
-      display:inline-flex;align-items:center;gap:8px;
-      background:var(--navy2);color:#fff;
-      padding:10px 14px;border-radius:10px;
-      text-decoration:none;font-weight:600;border:1px solid transparent
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      background:var(--navy2);
+      color:#fff;
+      padding:10px 14px;
+      border-radius:10px;
+      text-decoration:none;
+      font-weight:600;
+      border:1px solid transparent;
     }
     .btn:hover{text-decoration:none;filter:brightness(1.04)}
     .btn:focus{outline:none;box-shadow:var(--focus)}
     .btn.alt{background:#474a51}
 
-    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:18px;margin-top:16px;border:1px solid var(--border)}
+    .card{
+      background:var(--card);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:18px;
+      margin-top:16px;
+      border:1px solid var(--border);
+    }
+
+    .kicker{
+      font-size:12px;
+      color:#6b7787;
+      text-transform:uppercase;
+      letter-spacing:.4px;
+      margin-bottom:6px;
+    }
+
     label{display:block;font-weight:600;margin:10px 0 6px;color:#30415d}
     input,textarea{
       width:100%;
       padding:12px 14px;
       border-radius:10px;
       border:1px solid #d7dde8;
-      font-size:15px
+      font-size:15px;
     }
-    input:focus, textarea:focus{outline:none;box-shadow:var(--focus);border-color:rgba(13,110,253,.35)}
+    input:focus, textarea:focus{
+      outline:none;
+      box-shadow:var(--focus);
+      border-color:rgba(13,110,253,.35);
+    }
     textarea{min-height:140px;resize:vertical}
+
     .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
     @media (max-width:640px){ .row{grid-template-columns:1fr} }
 
     .submit{
       margin-top:12px;
-      display:inline-flex;align-items:center;gap:8px;
-      background:var(--navy2);color:#fff;
-      padding:12px 16px;border-radius:10px;border:none;
-      font-weight:700;cursor:pointer
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      background:var(--navy2);
+      color:#fff;
+      padding:12px 16px;
+      border-radius:10px;
+      border:none;
+      font-weight:700;
+      cursor:pointer;
     }
     .submit:focus{outline:none;box-shadow:var(--focus)}
     .note{color:var(--muted);font-size:14px;margin-top:10px;line-height:1.5}
@@ -98,7 +160,16 @@
     .status.err{background:var(--errbg);color:var(--errfg)}
 
     footer{margin-top:28px;background:var(--navy);color:#cfd9ea}
-    .foot{max-width:1100px;margin:0 auto;padding:16px 20px;display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap}
+    .foot{
+      max-width:1100px;
+      margin:0 auto;
+      padding:16px 20px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+      flex-wrap:wrap;
+    }
     footer a{color:#e8eef8}
   </style>
 </head>
@@ -106,7 +177,11 @@
 <body>
   <header>
     <div class="nav">
-      <div class="brand"><div class="lock" aria-hidden="true"></div><div>Niknaz Sadehvandi</div></div>
+      <div class="brand">
+        <div class="lock" aria-hidden="true"></div>
+        <div>Niknaz Sadehvandi</div>
+      </div>
+
       <nav aria-label="Primary">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -120,9 +195,7 @@
 
   <main class="wrap">
     <h1>Get in Touch</h1>
-    <p class="lead">
-      Open to roles in SOC analysis, digital forensics, vulnerability management, and compliance (remote or hybrid).
-    </p>
+    <p class="lead">Open to roles in SOC analysis, DFIR, vulnerability management, and GRC (remote or hybrid).</p>
 
     <div class="btnrow">
       <a class="btn" href="mailto:sadvandniknaz0@gmail.com">Email</a>
@@ -133,13 +206,11 @@
     </div>
 
     <section class="card">
-      <div class="kicker" style="font-size:12px;color:#6b7787;text-transform:uppercase;letter-spacing:.4px;">Message Form</div>
+      <div class="kicker">Message Form</div>
 
-      <!-- Option A: Set a real Formspree endpoint, e.g. https://formspree.io/f/abcdwxyz -->
-      <!-- Option B: Keep action="" and remove JS submit; rely on Email button above -->
-      <form id="contactForm" action="" method="POST" novalidate>
-        <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
-        <input type="hidden" name="subject" value="New message from niknaz-65.github.io" />
+    <form id="contactForm" action="https://formspree.io/f/mqakzvpd" method="POST" novalidate>
+  <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
+  <input type="hidden" name="subject" value="New message from niknaz-65.github.io" />
 
         <div class="row">
           <div>
@@ -158,10 +229,13 @@
         <button class="submit" type="submit">Send Message</button>
 
         <div id="statusOk" class="status ok" role="status" aria-live="polite">Message sent.</div>
-        <div id="statusErr" class="status err" role="status" aria-live="polite">Form not configured. Use the Email button above.</div>
+        <div id="statusErr" class="status err" role="status" aria-live="polite">Problem sending your message. Use the Email button above.</div>
 
         <p class="note">
-          Resume: <a href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf</a>
+          Resume:
+          <a href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
+            Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf
+          </a>
         </p>
       </form>
     </section>
@@ -188,6 +262,7 @@
 
       const endpoint = (form.getAttribute('action') || '').trim();
       if (!endpoint) {
+        err.textContent = 'Form not configured. Use the Email button above.';
         err.style.display = 'block';
         return;
       }
@@ -215,3 +290,4 @@
   </script>
 </body>
 </html>
+```
