--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
     <section class="card">
       <div class="kicker">Message Form</div>
 
-    <form id="contactForm" action="https://formspree.io/f/mqakzvpd" method="POST" novalidate>
+    <form id="contactForm" action="https://formspree.io/f/mvgwbrqb" method="POST" novalidate>
   <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
   <input type="hidden" name="subject" value="New message from niknaz-65.github.io" />
 
