--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Niknaz Sadehvandi | Cybersecurity Analyst</title>
 
   <!-- Primary SEO -->
-  <meta name="description" content="Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations. Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK and NIST; familiar with SOX ITGC." />
+ <meta name="description" content="Cybersecurity Analyst with experience in SIEM monitoring, endpoint and network telemetry analysis, and SOC investigations. Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC."/>
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
@@ -219,10 +219,10 @@
         <li>UMGC M.S. Cybersecurity • GPA 4.0</li>
       </ul>
 
-      <p class="summary">
-        Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations.
-        Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK and NIST, with familiarity in SOX ITGC.
-      </p>
+     <p class="summary">
+  Cybersecurity Analyst with experience in SIEM monitoring, endpoint and network telemetry analysis, and SOC investigations.
+  Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC.
+</p>
 
      <p class="summary">
   Founder &amp; Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present).
@@ -370,17 +370,17 @@
   </section>
 
   <!-- Certifications -->
-  <section class="section" id="certifications">
-    <div class="card">
-      <h2>Certifications</h2>
-      <p style="color: var(--muted); margin: 0;">
-        IBM: Python Basics for Data Science (2024) • R Programming Fundamentals (2024) • <em>Azure Fundamentals (in progress)</em>
-      </p>
-      <p style="margin: 10px 0 0;">
-        <a href="certifications.html">See all certifications &rarr;</a>
-      </p>
-    </div>
-  </section>
+ <section class="section" id="certifications">
+  <div class="card">
+    <h2>Certifications</h2>
+    <p style="color: var(--muted); margin: 0;">
+      IBM: Python Basics for Data Science (2024)
+    </p>
+    <p style="margin: 10px 0 0;">
+      <a href="certifications.html">See all certifications &rarr;</a>
+    </p>
+  </div>
+</section>
 
   <!-- Detailed Skills -->
   <section class="section" id="skills-detailed">
@@ -409,7 +409,7 @@
         <div class="card" style="padding:16px;">
           <h3 style="margin-top:0;">Tools</h3>
           <ul style="margin:0; padding-left:18px; color:var(--muted); line-height:1.6;">
-            <li>Wireshark, Nmap, Nessus/Tenable (lab)</li>
+            <li>Wireshark, Nmap, Nessus/Tenable</li>
             <li>Autopsy, FTK Imager, Autoruns</li>
             <li>VirusTotal, Event Viewer, auditpol</li>
           </ul>
@@ -418,8 +418,8 @@
         <div class="card" style="padding:16px;">
           <h3 style="margin-top:0;">Programming</h3>
           <ul style="margin:0; padding-left:18px; color:var(--muted); line-height:1.6;">
-            <li>Python, PowerShell, Bash</li>
-            <li>Java and R (academic projects)</li>
+           <li>Python, PowerShell, Bash</li>
+           <li>Java, R</li>
           </ul>
         </div>
       </div>
