--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <title>Projects | Niknaz Sadehvandi</title>
 
   <!-- SEO -->
-  <meta name="description" content="Cybersecurity projects by Niknaz Sadehvandi — SIEM, SOC detections, DFIR, and threat intelligence labs." />
+  <meta name="description" content="Cybersecurity projects by Niknaz Sadehvandi — SIEM engineering, SOC detections, DFIR investigations, and threat intelligence analysis." />
   <meta name="robots" content="index,follow" />
 
   <link rel="icon" href="assets/favicon.png" />
@@ -113,7 +113,7 @@
 
 <main class="wrap">
   <h1>Projects</h1>
-  <p class="lead">Hands-on cybersecurity projects aligned with SOC analyst and DFIR workflows.</p>
+  <p class="lead">Cybersecurity projects aligned with SOC analyst and DFIR workflows.</p>
 
   <section class="grid">
 
@@ -174,7 +174,7 @@
       <div class="pad">
         <div class="kicker">DFIR</div>
         <h3>Digital Forensics Investigation</h3>
-        <p>Reconstructed intrusion timelines using logs and forensic artifacts.</p>
+        <p>Reconstructed an intrusion timeline using logs and forensic artifacts.</p>
         <ul class="meta">
           <li>IIS logs and persistence artifacts</li>
           <li>Evidence-based conclusions</li>
@@ -191,7 +191,7 @@
       <div class="pad">
         <div class="kicker">Threat Intelligence</div>
         <h3>IOC Hunting & CTI Analysis</h3>
-        <p>Processed 30,000+ indicators to simulate CTI enrichment workflows.</p>
+        <p>Processed 30,000+ indicators to support CTI enrichment workflows.</p>
         <ul class="meta">
           <li>OTX indicators</li>
           <li>API-driven enrichment</li>
