--- a/certifications.html
+++ b/certifications.html
@@ -151,7 +151,7 @@
   <main class="wrap">
     <h1>Certifications</h1>
     <p class="lead">
-      Completed credentials supporting SIEM workflows, scripting automation, and security projects.
+      Completed credentials supporting SIEM workflows, scripting automation, and cybersecurity projects.
     </p>
 
     <section class="list" aria-label="Certifications">
