--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@
       <div class="pad">
         <div class="kicker">SOC / SIEM</div>
         <h3>Elastic SIEM Endpoint Telemetry (Sysmon)</h3>
-        <p>Fleet-managed endpoint telemetry pipeline using Sysmon v15+ validated with KQL in Kibana.</p>
+        <p>Fleet-managed endpoint telemetry pipeline using Sysmon v15+ validated with KQL queries in Kibana Discove.</p>
         <ul class="meta">
           <li>Process, network, and PowerShell events</li>
           <li>SOC-style validation in Discover</li>
