Update name from Niknaz Sadehvandi to Nikki Sadvand

--- a/certifications.html
+++ b/certifications.html
@@ -1,17 +1,16 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Certifications | Niknaz Sadehvandi</title>
+  <title>Certifications | Nikki Sadvand</title>
 
   <!-- Primary SEO -->
-  <meta name="description" content="Verified certifications and credentials for Niknaz Sadehvandi — cybersecurity, scripting, and cloud fundamentals." />
+  <meta name="description" content="Verified certifications and credentials for Nikki Sadvand — cybersecurity, scripting, and cloud fundamentals." />
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Certifications | Niknaz Sadehvandi" />
+  <meta property="og:title" content="Certifications | Nikki Sadvand" />
   <meta property="og:description" content="Completed credentials supporting SIEM workflows, automation, and security projects." />
   <meta property="og:type" content="website" />
 
@@ -135,7 +134,7 @@
     <div class="nav">
       <div class="brand">
         <div class="lock" aria-hidden="true"></div>
-        <div>Niknaz Sadehvandi</div>
+        <div>Nikki Sadvand</div>
       </div>
       <nav aria-label="Primary">
         <ul>
@@ -165,19 +164,21 @@
           </p>
         </div>
 
-     <div class="actions">
-  <a class="btn alt" href="contact.html">
-    View certificate (available upon request)
-  </a>
-</div>
+        <div class="actions">
+          <a class="btn alt" href="contact.html">
+            View certificate (available upon request)
+          </a>
+        </div>
       </article>
     </section>
   </main>
 
   <footer>
     <div class="foot">
-      <small>© <span id="y"></span> Niknaz Sadehvandi • Cybersecurity Portfolio</small>
-      <a href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
+      <small>© <span id="y"></span> Nikki Sadvand • Cybersecurity Portfolio</small>
+      <a href="Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
+        Download Resume (PDF)
+      </a>
     </div>
   </footer>
 
@@ -186,4 +187,3 @@
   </script>
 </body>
 </html>
-```
