Update contact information and names in contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,16 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Niknaz Sadehvandi</title>
+  <title>Contact | Nikki Sadvand</title>
 
   <!-- Primary SEO -->
-  <meta name="description" content="Contact Niknaz Sadehvandi for cybersecurity roles and collaborations." />
+  <meta name="description" content="Contact Nikki Sadvand for cybersecurity roles and collaborations." />
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Contact | Niknaz Sadehvandi" />
+  <meta property="og:title" content="Contact | Nikki Sadvand" />
   <meta property="og:description" content="Cybersecurity Analyst — SOC, DFIR, SIEM, and compliance." />
   <meta property="og:type" content="website" />
 
@@ -179,7 +178,7 @@
     <div class="nav">
       <div class="brand">
         <div class="lock" aria-hidden="true"></div>
-        <div>Niknaz Sadehvandi</div>
+        <div>Nikki Sadvand</div>
       </div>
 
       <nav aria-label="Primary">
@@ -200,17 +199,17 @@
     <div class="btnrow">
       <a class="btn" href="mailto:sadvandniknaz0@gmail.com">Email</a>
       <a class="btn" href="tel:+12026001591">Call: (202) 600-1591</a>
-      <a class="btn" href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">LinkedIn</a>
-      <a class="btn" href="https://github.com/niknaz-65" target="_blank" rel="noopener">GitHub</a>
-      <a class="btn alt" href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+      <a class="btn" href="https://www.linkedin.com/in/Nikki-Sadvand-a34179325" target="_blank" rel="noopener">LinkedIn</a>
+      <a class="btn" href="https://github.com/Nikki-65" target="_blank" rel="noopener">GitHub</a>
+      <a class="btn alt" href="Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
     </div>
 
     <section class="card">
       <div class="kicker">Message Form</div>
 
-    <form id="contactForm" action="https://formspree.io/f/mvgwbrqb" method="POST" novalidate>
-  <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
-  <input type="hidden" name="subject" value="New message from niknaz-65.github.io" />
+      <form id="contactForm" action="https://formspree.io/f/mvgwbrqb" method="POST" novalidate>
+        <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
+        <input type="hidden" name="subject" value="New message from nscybersecurity.com contact page" />
 
         <div class="row">
           <div>
@@ -224,7 +223,7 @@
         </div>
 
         <label for="message">Message</label>
-        <textarea id="message" name="message" required autocomplete="off" placeholder="Hi Niknaz, I’d like to connect about..."></textarea>
+        <textarea id="message" name="message" required autocomplete="off" placeholder="Hi Nikki, I’d like to connect about..."></textarea>
 
         <button class="submit" type="submit">Send Message</button>
 
@@ -233,8 +232,8 @@
 
         <p class="note">
           Resume:
-          <a href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
-            Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf
+          <a href="Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
+            Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf
           </a>
         </p>
       </form>
@@ -243,8 +242,8 @@
 
   <footer>
     <div class="foot">
-      <small>© <span id="y"></span> Niknaz Sadehvandi • Cybersecurity Portfolio</small>
-      <a href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
+      <small>© <span id="y"></span> Nikki Sadvand • Cybersecurity Portfolio</small>
+      <a href="Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
     </div>
   </footer>
 
@@ -290,4 +289,3 @@
   </script>
 </body>
 </html>
-```
