Update name from Niknaz Sadehvandi to Nikki Sadvand

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Niknaz Sadehvandi | Cybersecurity Analyst</title>
+  <title>Nikki Sadvand | Cybersecurity Analyst</title>
 
   <!-- Primary SEO -->
- <meta name="description" content="Cybersecurity Analyst with experience in SIEM monitoring, endpoint and network telemetry analysis, and SOC investigations. Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC."/>
+  <meta name="description" content="Cybersecurity Analyst with experience in SIEM monitoring, endpoint and network telemetry analysis, and SOC investigations. Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC." />
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Niknaz Sadehvandi | Cybersecurity Portfolio" />
+  <meta property="og:title" content="Nikki Sadvand | Cybersecurity Portfolio" />
   <meta property="og:description" content="Elastic SIEM • Sysmon • Zeek • SOC Investigations • Windows Security Audits • MITRE ATT&CK • NIST • SOX ITGC" />
   <meta property="og:type" content="website" />
 
@@ -190,7 +190,7 @@
     <div class="nav">
       <div class="brand">
         <div class="lock" aria-hidden="true"></div>
-        <div>Niknaz Sadehvandi</div>
+        <div>Nikki Sadvand</div>
       </div>
       <nav aria-label="Primary">
         <ul>
@@ -207,7 +207,7 @@
   <section class="hero">
     <img class="headshot"
          src="assets/profile.jpg"
-         alt="Niknaz Sadehvandi, Cybersecurity Analyst">
+         alt="Nikki Sadvand, Cybersecurity Analyst">
 
     <div>
       <h1>Cybersecurity Analyst</h1>
@@ -219,22 +219,22 @@
         <li>UMGC M.S. Cybersecurity • GPA 4.0</li>
       </ul>
 
-     <p class="summary">
-  Cybersecurity Analyst with experience in SIEM monitoring, endpoint and network telemetry analysis, and SOC investigations.
-  Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC.
-</p>
+      <p class="summary">
+        Cybersecurity Analyst with experience in SIEM monitoring, endpoint and network telemetry analysis, and SOC investigations.
+        Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry, and Windows security assessments aligned with MITRE ATT&CK, NIST, and SOX ITGC. [file:23]
+      </p>
 
-     <p class="summary">
-  Founder &amp; Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present).
-</p>
+      <p class="summary">
+        Founder &amp; Cybersecurity Consultant — NS Cybersecurity (Dec 2024–Present). [file:23]
+      </p>
 
-<p class="summary">
-  Cybersecurity &amp; IT Support Technician — Sunset Auto Sales (Mar 2019–Present).
-</p>
+      <p class="summary">
+        Cybersecurity &amp; IT Support Technician — Sunset Auto Sales (Mar 2019–Present). [file:23]
+      </p>
 
       <div class="cta">
         <div class="cta-main">
-          <a class="btn pdf" href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
+          <a class="btn pdf" href="Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
             Download Resume (PDF)
           </a>
           <a class="btn outline" href="projects.html">View Projects</a>
@@ -242,12 +242,12 @@
         </div>
 
         <div class="cta-social">
-          <a class="btn linkedin" href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">
+          <a class="btn linkedin" href="https://www.linkedin.com/in/Nikki-Sadvand-a34179325" target="_blank" rel="noopener">
             <img class="icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="" aria-hidden="true">
             LinkedIn
           </a>
 
-          <a class="btn github" href="https://github.com/niknaz-65" target="_blank" rel="noopener">
+          <a class="btn github" href="https://github.com/Nikki-65" target="_blank" rel="noopener">
             <img class="icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="" aria-hidden="true">
             GitHub
           </a>
@@ -322,7 +322,7 @@
           Investigated persistence mechanisms and SSH-based exfiltration. Used FTK Imager, Autopsy, and Autoruns to reconstruct a timeline and document remediation aligned with NIST and ITGC.
         </p>
         <p>
-          <a href="https://github.com/niknaz-65/digital-forensics-project3" target="_blank" rel="noopener">
+          <a href="https://github.com/Nikki-65/digital-forensics-project3" target="_blank" rel="noopener">
             View project &rarr;
           </a>
         </p>
@@ -335,7 +335,7 @@
           Built SPL queries for failed logins and suspicious process activity. Designed triage dashboards to pivot quickly by host and user.
         </p>
         <p>
-          <a href="https://github.com/niknaz-65/splunk-detections-dashboards" target="_blank" rel="noopener">
+          <a href="https://github.com/Nikki-65/splunk-detections-dashboards" target="_blank" rel="noopener">
             View project &rarr;
           </a>
         </p>
@@ -348,7 +348,7 @@
           Python wrapper around Nmap that runs enumeration profiles, parses XML output, and generates an HTML summary for reporting handoff.
         </p>
         <p>
-          <a href="https://github.com/niknaz-65/network-recon-toolkit" target="_blank" rel="noopener">
+          <a href="https://github.com/Nikki-65/network-recon-toolkit" target="_blank" rel="noopener">
             View project &rarr;
           </a>
         </p>
@@ -361,7 +361,7 @@
           Designed an 8-bit ALU and simple CPU in Logisim-evolution supporting multiple operations with registers, flags, and a control unit.
         </p>
         <p>
-          <a href="https://github.com/niknaz-65/alu-cpu-logisim/blob/main/CPU_Project.pdf" target="_blank" rel="noopener">
+          <a href="https://github.com/Nikki-65/alu-cpu-logisim/blob/main/CPU_Project.pdf" target="_blank" rel="noopener">
             Project report (PDF) &rarr;
           </a>
         </p>
@@ -370,17 +370,17 @@
   </section>
 
   <!-- Certifications -->
- <section class="section" id="certifications">
-  <div class="card">
-    <h2>Certifications</h2>
-    <p style="color: var(--muted); margin: 0;">
-      IBM: Python Basics for Data Science (2024)
-    </p>
-    <p style="margin: 10px 0 0;">
-      <a href="certifications.html">See all certifications &rarr;</a>
-    </p>
-  </div>
-</section>
+  <section class="section" id="certifications">
+    <div class="card">
+      <h2>Certifications</h2>
+      <p style="color: var(--muted); margin: 0;">
+        IBM: Python Basics for Data Science (2024)
+      </p>
+      <p style="margin: 10px 0 0;">
+        <a href="certifications.html">See all certifications &rarr;</a>
+      </p>
+    </div>
+  </section>
 
   <!-- Detailed Skills -->
   <section class="section" id="skills-detailed">
@@ -418,8 +418,8 @@
         <div class="card" style="padding:16px;">
           <h3 style="margin-top:0;">Programming</h3>
           <ul style="margin:0; padding-left:18px; color:var(--muted); line-height:1.6;">
-           <li>Python, PowerShell, Bash</li>
-           <li>Java, R</li>
+            <li>Python, PowerShell, Bash</li>
+            <li>Java, R</li>
           </ul>
         </div>
       </div>
@@ -440,8 +440,8 @@
 
   <footer>
     <div class="foot">
-      <small>© <span id="y"></span> Niknaz Sadehvandi • Cybersecurity Portfolio</small>
-      <a href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
+      <small>© <span id="y"></span> Nikki Sadvand • Cybersecurity Portfolio</small>
+      <a href="Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
     </div>
   </footer>
 
